--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,22 @@
         }
     ],
     "require": {
-        "illuminate/support": "^5.5",
-        "spatie/laravel-html": "^2.10",
-        "illuminate/contracts": "^5.5"
+        "illuminate/contracts": "^5.5",
+        "spatie/laravel-html": "^2.10"
+    },
+    "require-dev": {
+        "graham-campbell/testbench": "^4.0",
+        "laravel/framework": "^5.5",
+        "phpunit/phpunit": "^6.5"
     },
     "autoload": {
         "psr-4": {
             "RickSelby\\Laravel\\FormComponents\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "RickSelby\\Tests\\": "tests/"
         }
     },
     "extra": {
