--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,11 @@
         }
     ],
     "require": {
-        "illuminate/contracts": "^5.5",
+        "illuminate/contracts": "5.4.*|5.5.*",
         "spatie/laravel-html": "^2.10"
     },
     "require-dev": {
         "graham-campbell/testbench": "^4.0",
-        "laravel/framework": "^5.5",
         "phpunit/phpunit": "^6.5"
     },
     "autoload": {
