--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,7 @@ before_install:
 
 install: travis_retry composer install --no-suggest --prefer-dist -n -o
 
-script: vendor/bin/phpunit --coverage-clover ./clover.xml
-
-after_success:
-# Code coverage report
-  - bash <(curl -s https://codecov.io/bash)
+script: vendor/bin/phpunit
 
 branches:
   only:
