--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ env:
   matrix:
     - LARAVEL_VERSION=5.4.*
     - LARAVEL_VERSION=5.5.*
+    - LARAVEL_VERSION=5.6.*
+
+matrix:
+  exclude:
+  - php: 7.0
+    env: LARAVEL_VERSION=5.6.*
 
 before_install:
   - composer self-update --stable -n
