--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/contracts": "5.4.*|5.5.*",
+        "illuminate/contracts": "5.4.*|5.5.*|5.6.*",
         "spatie/laravel-html": "^2.10"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^4.0",
-        "phpunit/phpunit": "^6.5"
+        "graham-campbell/testbench": "^4.0|^5.0",
+        "phpunit/phpunit": "^6.5|^7.0"
     },
     "autoload": {
         "psr-4": {
