--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,14 @@ env:
     - LARAVEL_VERSION=5.4.*
     - LARAVEL_VERSION=5.5.*
     - LARAVEL_VERSION=5.6.*
+    - LARAVEL_VERSION=5.7.*
 
 matrix:
   exclude:
   - php: 7.0
     env: LARAVEL_VERSION=5.6.*
+  - php: 7.0
+    env: LARAVEL_VERSION=5.7.*
 
 before_install:
   - composer self-update --stable -n
