--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - LARAVEL_VERSION=5.5.*
     - LARAVEL_VERSION=5.6.*
     - LARAVEL_VERSION=5.7.*
+    - LARAVEL_VERSION=5.8.*
 
 matrix:
   exclude:
@@ -21,6 +22,8 @@ matrix:
     env: LARAVEL_VERSION=5.6.*
   - php: 7.0
     env: LARAVEL_VERSION=5.7.*
+  - php: 7.0
+    env: LARAVEL_VERSION=5.8.*
 
 before_install:
   - composer self-update --stable -n
