--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,17 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4]
-        laravel: [5.4.*, 5.5.*, 5.6.*, 5.7.*, 5.8.*]
+        php: [7.3, 7.4, 8.0]
+        laravel: [5.7.*, 5.8.*, 6.*]
         exclude:
-          - php: 7.4
-            laravel: 5.4.*
-          - php: 7.4
-            laravel: 5.5.*
-          - php: 7.4
-            laravel: 5.6.*
-          - php: 7.4
+          - php: 8.0
             laravel: 5.7.*
+          - php: 8.0
+            laravel: 5.8.*
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
     steps:
