--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "illuminate/contracts": "5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "illuminate/contracts": "5.7.*|5.8.*|6.*",
         "spatie/laravel-html": "^2.10"
     },
     "require-dev": {
