--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,12 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         php: [7.3, 7.4, 8.0]
-        laravel: [5.7.*, 5.8.*, 6.*]
-        exclude:
-          - php: 8.0
-            laravel: 5.7.*
-          - php: 8.0
-            laravel: 5.8.*
+        laravel: [6.*]
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
     steps:
