--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "illuminate/contracts": "5.7.*|5.8.*|6.*",
+        "illuminate/contracts": "6.*",
         "spatie/laravel-html": "^2.10"
     },
     "require-dev": {
         "graham-campbell/testbench": "^4.0|^5.0",
-        "phpunit/phpunit": "^7.0|^8.0|^9.0|^10.0"
+        "phpunit/phpunit": "^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
