--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,13 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0, 8.1]
-        laravel: [6.*, 7.*, 8.*]
-        exclude:
-          - php: 8.1
-            laravel: 6.*
-          - php: 8.1
-            laravel: 7.*
+        php: [8.0, 8.1]
+        laravel: [8.*]
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
     steps:
