--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require-dev": {
         "graham-campbell/testbench": "^4.0|^5.0",
-        "phpunit/phpunit": "^9.0|^10.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
